force-app/main/default/objects/Fact_SFDC_OrderDetail__x/Fact_SFDC_OrderDetail__x.object-meta.xml
<CustomObject>
    <externalDataSource>dgw_united_termite</externalDataSource>
    <externalName>Fact_SFDC_OrderDetail</externalName>
    <label>Customer Invoice Detail</label>
    <pluralLabel>Customer Invoice Details</pluralLabel>
</CustomObject>