force-app/main/default/objects/Fact_SFDC_OrderDetail__x/fields/DeliveryNumber__c.field-meta.xml
<CustomField>
    <fullName>DeliveryNumber__c</fullName>
    <description>DeliveryNumber</description>
    <externalDeveloperName>DeliveryNumber</externalDeveloperName>
    <label>DeliveryNumber</label>
    <length>11</length>
    <type>Text</type>
</CustomField>