force-app/main/default/objects/Fact_SFDC_OrderDetail__x/fields/InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNumber__c</fullName>
    <description>InvoiceNumber</description>
    <externalDeveloperName>InvoiceNumber</externalDeveloperName>
    <label>InvoiceNumber</label>
    <length>10</length>
    <referenceTo>Fact_SFDC_OrderHeader__x</referenceTo>
    <relationshipLabel>Customer Invoice Details</relationshipLabel>
    <relationshipName>Customer_Invoice_Details</relationshipName>
    <type>ExternalLookup</type>
</CustomField>