force-app/main/default/objects/Fact_SFDC_OrderDetail__x/fields/InvoiceQuantity__c.field-meta.xml
<CustomField>
    <fullName>InvoiceQuantity__c</fullName>
    <description>InvoiceQuantity</description>
    <externalDeveloperName>InvoiceQuantity</externalDeveloperName>
    <label>InvoiceQuantity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>