force-app/main/default/objects/Fact_SFDC_OrderDetail__x/fields/ItemDescription__c.field-meta.xml
<CustomField>
    <fullName>ItemDescription__c</fullName>
    <description>ItemDescription</description>
    <externalDeveloperName>ItemDescription</externalDeveloperName>
    <label>ItemDescription</label>
    <length>60</length>
    <type>Text</type>
</CustomField>