force-app/main/default/objects/Fact_SFDC_OrderDetail__x/fields/ItemNumber__c.field-meta.xml
<CustomField>
    <fullName>ItemNumber__c</fullName>
    <description>ItemNumber</description>
    <externalDeveloperName>ItemNumber</externalDeveloperName>
    <label>ItemNumber</label>
    <length>15</length>
    <type>Text</type>
</CustomField>