force-app/main/default/objects/Fact_SFDC_OrderDetail__x/fields/LineNumber__c.field-meta.xml
<CustomField>
    <fullName>LineNumber__c</fullName>
    <description>LineNumber</description>
    <externalDeveloperName>LineNumber</externalDeveloperName>
    <label>LineNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>