force-app/main/default/objects/Fact_SFDC_OrderDetail__x/fields/Ordernumber__c.field-meta.xml
<CustomField>
    <fullName>Ordernumber__c</fullName>
    <description>Ordernumber</description>
    <externalDeveloperName>Ordernumber</externalDeveloperName>
    <label>Ordernumber</label>
    <length>10</length>
    <type>Text</type>
</CustomField>