force-app/main/default/objects/Fact_SFDC_OrderDetail__x/fields/UnitPriceAmount__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceAmount__c</fullName>
    <description>UnitPriceAmount</description>
    <externalDeveloperName>UnitPriceAmount</externalDeveloperName>
    <label>UnitPriceAmount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>